--- a/belajar CRUD/src/output.css
+++ b/belajar CRUD/src/output.css
@@ -566,6 +566,14 @@ video {
   margin-bottom: 1.75rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
 .block {
   display: block;
 }
@@ -632,6 +640,10 @@ video {
 
 .w-4\/5 {
   width: 80%;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
 }
 
 .flex-row {
@@ -762,6 +774,10 @@ video {
 
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
 }
 
 .px-10 {
